Make sure it's visible in light mode too

--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,10 @@ select:hover {
   .card-body:hover {
     background-color: #2c2c2c;
   }
+
+  .horz-center {
+    color: #ffffff;
+  }
 }
 
 #print-container {
